--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h class="h">this is my website</h>
 
-    <h1 class="h2">About Cake</h1>
+    <h1 class="h2"> Cake</h1>
 
     <h2 class="h3">Black Forest Cake</h2>
     <h3 class="h3">fruit cake</h3>
